beneficiaries stats updated

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="#" class="nav__logo">
-                <img src="/assets/img/favicon/olaarowolo.com_logo_black.png" alt="Olasunkanmi Arowolo Logo"
+                <img src="/assets/img/favicon/olaarowolo.com_loo_black.png" alt="Logo"
                     style="width: 5rem; height: 5rem;">
             </a>
             <!-- <a href="#" class="nav__logo">Olasunkanmi Arowolo</a> -->
@@ -183,17 +183,17 @@
 
                 <div class="about__info">
                     <div>
-                        <span class="about__info-title">11</span>
+                        <span class="about__info-title">16</span>
                         <span class="about__info-name">Beneficiaries' <br> since 2022 </span>
                     </div>
 
                     <div>
-                        <span class="about__info-title">02</span>
+                        <span class="about__info-title">05</span>
                         <span class="about__info-name">Aced JAMB <br> Examination</span>
                     </div>
 
                     <div>
-                        <span class="about__info-title">01</span>
+                        <span class="about__info-title">03</span>
                         <span class="about__info-name">Confirmed <br> Admitted to Uni</span>
                     </div>
                     <div>
