updated logo link

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="#" class="nav__logo">
-                <img src="/assets/img/favicon/olaarowolo.com_loo_black.png" alt="Logo"
+                <img src="/assets/img/favicon/olaarowolo.com_logo_black.png" alt="Logo"
                     style="width: 5rem; height: 5rem;">
             </a>
             <!-- <a href="#" class="nav__logo">Olasunkanmi Arowolo</a> -->
